# python-tool-example

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test_workflow.yml
my_example/: my_example_code.py
my_example/scripts/: my_example_cli.py
test/: test_my_example.py
